@@ -20,10 +20,10 @@ endif
 EXTRA_DIST = skstream.m4 skstream-config.in autogen.sh skstream-config.1 Skstream.pbproj/jmt.pbxuser Skstream.pbproj/project.pbxproj
 
 dist-hook: $(MSVC_SUPPORT)
-	$(MSVC_INSTALL_DIST) $(MSVC_SUPPORT) $(distdir)/$(MSVC_SUPPORT)   
+	$(MSVC_INSTALL_DIST) $(srcdir)/$(MSVC_SUPPORT) $(distdir)/$(MSVC_SUPPORT)   
 
 VisualC.zip:
-	@SK_ZIP@ -r VisualC.zip VisualC/ -x '*CVS/*'
+	@SK_ZIP@ -r $(srcdir)/VisualC.zip $(srcdir)/VisualC/ -x '*CVS/*'
 
 SUBDIRS = skstream test
 
