@@ -22,7 +22,13 @@
 //  Created: 2002-02-19 by Dan Tomalesky
 //
 // $Log$
-// Revision 1.5  2002-06-12 20:48:40  xmp
+// Revision 1.5.2.1  2003-06-23 19:58:42  alriddoch
+//  2003-06-23 Al Riddoch <alriddoch@zepler.org>,
+//     - Tweak Makefile.ams to make distcheck work.
+//     - test/basicskstreamtest.h, test/childskstreamtest.h, test/skservertest.h,
+//       test/socketbuftest.h: Include library headers correctly.
+//
+// Revision 1.5  2002/06/12 20:48:40  xmp
 // The usual std namespace stuff.  IE this was made on gcc-2.95, and gcc-3.1 is stricter.
 //
 // Revision 1.4  2002/03/01 14:00:09  grimicus
@@ -113,7 +119,7 @@
 #ifndef BASICSKSTREAMTEST_H
 #define BASICSKSTREAMTEST_H
 
-#include "skstream.h"
+#include <skstream/skstream.h>
 
 #include <cppunit/TestCase.h>
 #include <cppunit/extensions/HelperMacros.h>
