@@ -22,7 +22,13 @@
 //  Created: 2002-02-24 by Dan Tomalesky
 //
 // $Log$
-// Revision 1.1  2002-02-26 20:33:55  grimicus
+// Revision 1.1.2.1  2003-06-23 19:58:42  alriddoch
+//  2003-06-23 Al Riddoch <alriddoch@zepler.org>,
+//     - Tweak Makefile.ams to make distcheck work.
+//     - test/basicskstreamtest.h, test/childskstreamtest.h, test/skservertest.h,
+//       test/socketbuftest.h: Include library headers correctly.
+//
+// Revision 1.1  2002/02/26 20:33:55  grimicus
 // 02/26/2002 Dan Tomalesky <grim@xynesis.com>
 //     * Added test cases for skserver and friends
 //
@@ -58,7 +64,7 @@
 #ifndef SKSERVERTEST_H
 #define SKSERVERTEST_H
 
-#include "skserver.h"
+#include <skstream/skserver.h>
 
 #include <cppunit/TestCase.h>
 #include <cppunit/extensions/HelperMacros.h>
